--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-countup": "^6.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-tabs": "^3.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
